# calibre-web-automated-book-downloader

./: .dockerignore  Dockerfile  pyproject.toml  readme.md
.github/workflows/: lint.yml
config/: settings.py
data/: book-languages.json
src/: conf.py  logger.py  models.py  wsgi.py
src/app/: __init__.py  auth.py  blueprint.py  routes.py  views.py
src/app/api/: blueprint.py
src/app/debug/: blueprint.py
src/app/frontend/: blueprint.py
src/config/: settings.py
src/services/: backend.py  book_manager.py  book_queue.py  book_service.py  downloader.py  network.py  registry.py
src/services/archive_managers/: book_manager.py
src/services/bypassers/cf_bypasser/: cloudflare_bypasser.py  cloudflare_bypasser_external.py
src/services/cf_bypasser/: cloudflare_bypasser.py  cloudflare_bypasser_external.py
src/services/parsers/: annas_archive.py  base.py
src/services/web_bypassers/: __init__.py  base.py  external.py
src/services/web_bypassers/cloudflare/: __init__.py  bypasser.py  engine.py
src/utils/: __init__.py  book_utils.py  debug_utils.py  import_utils.py  logger_utils.py  threading_utils.py
tests/: E2E_test.py
