[project]
name = "calibre-web-automated-book-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "corgi-in-tights",email = "59304120+corgi-in-tights@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests[socks] (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== ruff ====
[tool.ruff]
line-length = 119
target-version = "py312"
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
  "F", "E", "W", "C90", "I", "N", "UP", "YTT",
  "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4",
  "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN",
  "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
  "SLF", "SLOT", "SIM", "TID", "TC", "INT", "PTH", "ERA",
  "PD", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"
]
ignore = [
  "S101",     # Use of assert detected
  "RUF012",   # Mutable class attributes without typing.ClassVar
  "SIM102",   # Allow nested ifs sometimes
  "UP038"     # isinstance tuple perf issue
]
extend-unsafe-fixes = ["UP038"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false